# wortex

./: .envrc  .gitignore  CLAUDE.md  Cargo.toml  Taskfile.yml  build.rs  spec.md
.beads/: beads.db  beads.db-shm  beads.db-wal  beads.left.jsonl  beads.left.meta.json  issues.jsonl  sync-state.json
.claude/: settings.json
.claude/agents/: frontend-architect.md  product-owner.md  python-backend-architect.md
.claude/reference/: hexagonal-architecture.md
src/: cli.rs  db.rs  error.rs  git.rs  main.rs  state.rs  tmux.rs
src/commands/: cleanup.rs  init.rs  kill.rs  list.rs  log_tool.rs  mod.rs  new.rs  run.rs  status.rs  switch.rs  tools.rs
